# nixtla_intro_workshop

./: .gitignore  Introduction_to_MLForecast.ipynb  Introduction_to_NeuralForecast_TimeGPT.ipynb  Introduction_to_Nixtlaverse.ipynb  Introduction_to_TimeGPT.ipynb  README.md  pyproject.toml  retail_sales.parquet  retail_sales_product_level.parquet  utilities.py
