[project]
name = "nixtla-intro-workshop"
version = "0.1.0"
description = "Some notebooks that demonstrate how to do time series forecasting with Nixtla's tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "mlforecast>=1.0.2",
    "nbformat>=5.10.4",
    "neuralforecast>=3.0.2",
    "nixtla>=0.6.6",
    "plotly>=5.24.1",
    "polars>=1.21.0",
    "scikit-learn==1.5.2",
    "statsforecast>=2.0.2",
]
